[project]
name = "comfyui_bmad_nodes"
description = "This custom node offers the following functionalities: API support for setting up API requests, computer vision primarily for masking or collages, and general utility to streamline workflow setup or implement essential missing features."
version = "0.6.0"
license = { file = "LICENSE" }
dependencies = ["gray2color", "opencv-python~=4.8.1.78", "scikit-image~=0.20.0"]

[project.urls]
Repository = "https://github.com/bmad4ever/comfyui_bmad_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bmad4ever"
DisplayName = "comfyui_bmad_nodes"
Icon = ""
